[package]
name = "envious"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deserialize (potentially nested) environment variables into your custom structs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
