[package]
name = "envious"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deserialize (potentially nested) environment variables into your custom structs"
homepage = "https://github.com/TheNeikos/envious"
repository = "https://github.com/TheNeikos/envious"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
thiserror = "1.0.38"

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
